# EL30-Clinic-Application

./: .gitignore  Clinic API.postman_collection.json  README.md
backend/: Cargo.toml  server.toml
backend/src/: appointment_endpoints.rs  config.rs  config_endpoints.rs  lib.rs  main.rs  patient_endpoints.rs  types.rs  util.rs
backend/src/db/: appointment_db.rs  db.rs  mod.rs  patient_db.rs  types.rs
backend/tests/: integration_tests.rs
frontend/: index.html  package.json
frontend/src/: appointments.js  config.js  doctors.js  main.js  patients.js  utils.js
