[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.0"
env_logger = "0.11.5"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
surrealdb = { version = "1.5.5", features = ["kv-mem"] }
thiserror = "1.0.63"
tokio = "1.40.0"

[dev-dependencies]
actix-rt = "2.10.0"
